...
import androidx.compose.ui.platform.LocalContext
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp
import androidx.core.content.ContextCompat
import androidx.core.net.toUri

const val GRANT_ACCESS_TAG = "grantAllFilesAccess"

fun hasAllFilesAccess(context: Context): Boolean = when {
    Build.VERSION.SDK_INT >= Build.VERSION_CODES.R -> try {
        Environment.isExternalStorageManager()
    } catch (t: RuntimeException) {
        false
...
